[package]
name = "taxonate"
version = "0.1.0"
authors = ["Aaron Bull Schaefer <aaron@elasticdog.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "Identify and filter files based on their programming language."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.1"
log = "0.4.8"

[dependencies.clap]
version = "2.33.0"
default-features = true
features = ["wrap_help"]
