[package]
name = "taxonate"
version = "0.1.0"
authors = ["Aaron Bull Schaefer <aaron@elasticdog.com>"]
edition = "2018"
description = "Identify and filter files based on their programming language."
documentation = "https://github.com/elasticdog/taxonate/"
readme = "README.md"
homepage= "https://github.com/elasticdog/taxonate/"
repository = "https://github.com/elasticdog/taxonate/"
license = "MIT OR Apache-2.0"
keywords = ["cli", "file", "language", "text"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
env_logger = "0.7.1"
lazy_static = "1.1.1"
log = "0.4.8"
serde_json = "1.0.51"

[dependencies.clap]
version = "2.33.0"
default-features = true
features = ["wrap_help"]

[dependencies.serde]
version = "1.0.106"
features = ["derive"]

[badges]
maintenance = { status = "actively-developed" }
